# Agentic-SOC-Triage-Assistant

./: .env.example  .gitignore  README.md  fix_tests.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  server.py  walkthrough.md
agent/: config.py  correlation.py  errors.py  filtering.py  graph.py  models.py  nodes.py  schema.py  tools.py
alembic/: env.py
docs/: detection_engine.md  false_positive_handling.md  phase4-secure-triage.md  phase5c1-api-key-authentication.md  phase5c4b-rate-limiting.md  phase5d2b-safe-archive-foundation.md  phase5d2c-bounded-resumable-cleanup.md  phase5d3b1-transactional-search-outbox.md  real-log-triage.md  rule_tuning.md
scripts/: benchmark_detection.py  demo_firewall.py
tests/: fake_model.py  fake_provider.py  test_analysis_service_triage_context.py  test_cef_parser.py  test_detection_tools.py  test_dns_false_positives.py  test_event_id_stability.py  test_evidence_validation.py  test_filtering.py  test_flood_false_positives.py  test_generic_json_parser.py  test_graph_smoke.py  test_horizontal_scan.py  test_incident_correlation.py  test_ingest_cli.py  test_ingestion_input_immutability.py  test_ingestion_limits.py  test_input_format_detection.py  test_json_array_reader.py  test_mixed_format_ingestion.py  test_mock_parser.py  test_parse_failure_isolation.py  test_parser_ambiguity.py  test_parser_registry.py  test_pf_firewall_parser.py  test_rdp_scan.py  test_reporter_output.py  test_schema.py  test_schema_fingerprint.py  test_semantic_validation.py  test_spi_anomaly.py  test_ssh_scan.py  test_streaming_jsonl_reader.py  (+3 more)
(+184 files in other folders)
