[project]
name = "agentic-soc-triage-assistant"
version = "0.1.0"
description = "Agentic SOC Triage Assistant Foundation"
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
    "integration: requires external API or services",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
